packages/cjs-to-esm/test/snapshots/package-corpus/core-js/actual/error/to-string.js
import parent from "../../stable/error/to-string";
const _cjs_default = parent;
export default _cjs_default;
